--- a/views/word.erb
+++ b/views/word.erb
@@ -1,36 +1,28 @@
-<!-- <h4>Album Name: <%= @album.name %></h4>
-<h5>Year: <%= @album.year %></h5>
-<h5>Artist Name: <%= @album.artist %></h5>
+<h2><%= @word.spelling %></h2>
 
+<h3>Definiton</h3>
 
-<p><a href="/albums/<%= @album.id %>/edit">Edit album</a></p>
-<a href="/albums">Return to album list</a>
-
- -->
-
-<h3>Album Songs</h3>
-
-  <% if @album.songs %>
+  <% if @word.definition %>
     <ul>
-      <% @album.songs.each do |song| %>
-        <li><a href="/albums/<%= @album.id %>/songs/<%= song.id %>"><%= song.name %></a></li>
+      <% @word.definitions.each do |definition| %>
+        <li><a href="/words/<%= @word.id %>/definitions/<%= definition.id %>"><%= definition.spelling %></a></li>
       <% end %>
     </ul>
   <% else %>
-    <p>There are no songs listed for this album yet.</p>
+    <p>There are no definitions listed for this word yet.</p>
   <% end %>
 
-<h4>Add a song:</h4>
+<h4>Add a definition:</h4>
 
-<form action="/albums/<%= @album.id %>/songs" method="post">
+<form action="/words/<%= @word.id %>/definitions" method="post">
   <div class="form-group">
-    <label for="song_name">Song name</label>
-    <input id="song_name" name="song_name" class="form-control" type="text">
+    <label for="definition">Definiton</label>
+    <input id="definition" name="definition" class="form-control" type="text">
   </div>
-  <button type="submit" class="btn">Add song</button>
+  <button type="submit" class="btn">Add definition</button>
 </form>
 
 
 
-<p><a href="/albums/<%= @album.id %>/edit">Edit album</a></p>
-<p><a href="/albums">Return to album list</a></p>
+<p><a href="/words/<%= @word.id %>/edit">Edit word</a></p>
+<p><a href="/words">Return to word list</a></p>
