--- a/views/new_word.erb
+++ b/views/new_word.erb
@@ -2,8 +2,8 @@
 
 <form action="/words" method="post">
   <div class="form-group">
-    <label for="album_name">Word</label>
-    <input id="n" name="album_name" class="form-control" type="text">
+    <label for="word_name">Word</label>
+    <input id="n" name="word_name" class="form-control" type="text">
     <label for="definition">Definition</label>
     <input id="n" name="definition" class="form-control" type="text">
   </div>
