--- a/views/edit_word.erb
+++ b/views/edit_word.erb
@@ -1,10 +1,12 @@
-<h1>Update <%= @word.spelling() %></h1>
+<h1>Define Time</h1>
+
+<h1>Update <%= @word.name() %></h1>
 
 <form action="/words/<%= @word.id() %>" method="post">
-  <input name="_method" type="hidden" value="patch">
+  <input name="_method" type="text" value="patch">
 
-  <label for="spelling">Update spelling</label>
-  <input id="spelling" name="spelling" type="text">
+  <label for="name">Update name</label>
+  <input id="name" name="name" type="text">
 
   <label for="definition">Update definition</label>
   <input id="definition" name="definition" type="text">
@@ -15,7 +17,7 @@
 <p><a href="/words">Return to vocabulary list</a></p>
 
 <form action="/words/<%= @word.id() %>" method="post">
-  <input name="_method" type="hidden" value="delete">
+  <input name="_method" type="text" value="delete">
 
   <button type="submit">Delete word</button>
 </form>
