--- a/views/new_word.erb
+++ b/views/new_word.erb
@@ -1,11 +1,13 @@
+<h1>Define Time</h1>
+
 <h1>Add new word!</h1>
 
 <form action="/words" method="post">
   <div class="form-group">
     <label for="word_name">Word</label>
     <input id="n" name="word_name" class="form-control" type="text">
-    <label for="definition">Definition</label>
-    <input id="n" name="definition" class="form-control" type="text">
+    <label for="definition_name">Definition</label>
+    <input id="n" name="definition_name" class="form-control" type="text">
   </div>
   <button type="submit" class="btn">Go!</button>
 </form>
