still ironing out

--- a/views/edit_word.erb
+++ b/views/edit_word.erb
@@ -5,7 +5,7 @@
 <form action="/words/<%= @word.id() %>" method="post">
   <input name="_method" type="text" value="patch">
 
-  <label for="name">Update Word</label>
+  <label for="name">Edit Word</label>
   <input id="name" name="name" type="text">
 
   <label for="definition">Update Definition</label>
