--- a/views/word.erb
+++ b/views/word.erb
@@ -4,19 +4,19 @@
 
 <h3>Definition:</h3>
 
-<% if @words.definitions %>
-<ul>
-  <% @words.definitions.each do |defin| %>
-  <li><a href="/words/<%= @word.id %>/definition/<%= defin.id %>"><%= defin.written %></a></li>
+  <% if @words.definitions %>
+    <ul>
+      <% @words.definitions.each do |definite| %>
+        <li><a href="/words/<%= @words.id %>/definitions/<%= definite.id %>"><%= definite.written %></a></li>
+      <% end %>
+    </ul>
+  <% else %>
+    <p>There are no definitions listed for this word.</p>
   <% end %>
-</ul>
-<% else %>
-<p>There are no definitions listed for this word.</p>
-<% end %>
 
 <h4>Add a definition:</h4>
 
-<form action="/words/<%= @word.id %>/definitions" method="post">
+<form action="/words/<%= @words.id %>/definitions" method="post">
   <div class="form-group">
     <label for="definition_name">Definition</label>
     <input id="definition_name" name="definition" class="form-control" type="text">
@@ -24,5 +24,5 @@
   <button type="submit" class="btn">Add definition</button>
 </form>
 
-<p><a href="/words/<%= @word.id %>/edit">Edit Word</a></p>
+<p><a href="/words/<%= @words.id %>/edit">Edit Word</a></p>
 <p><a href="/words">Return to word list</a></p>
