--- a/views/words.erb
+++ b/views/words.erb
@@ -1,4 +1,4 @@
-<h1>Define Time</h1>
+<h1 class=jumbotron>Define Time</h1>
 
 <h3>Saved Words</h3>
 
@@ -12,8 +12,5 @@
 <% else %>
   <p>There are currently no words to display.</p>
 <% end %>
-
-<br>
-<br>
 
 <a href="/words/new">Add a word</a>
