--- a/views/new_word.erb
+++ b/views/new_word.erb
@@ -1,6 +1,6 @@
-<h1>Define Time</h1>
+<h1 class=jumbotron>Define Time</h1>
 
-<h1>Add new word!</h1>
+<h2>Add new word!</h2>
 
 <form action="/words" method="post">
   <div class="form-group">
